manifests/result/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app
  namespace: production
  annotations:
    pod.kubernetes.io/lifetime: 2m
  labels:
    app: result-app
spec:
  selector:
    matchLabels:
      app: result-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      namespace: production
      labels:
        app: result-app
    spec:
      containers:
      - name: result-app
        image: santiagososs/vote-result:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
          limits:
            memory: "600Mi"
            cpu: "80m"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result-app
  name: result-app
  namespace: production
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  selector:
    app: result-app
