manifests/result/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  name: result-ingress
  namespace: production
spec:
  tls:
  - hosts:
    - result.henrysantiago.com
  rules:
  - host: result.henrysantiago.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-app
            port:
              number: 80
